--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,3 @@
----
----
-
 @charset "utf-8";
 
 // Example Defaults
@@ -34,7 +31,7 @@
 // }
 
 // variables.less
-$theme-primary: #F05F40;
+$theme-primary: #f4a7bb;
 $theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
