--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -154,8 +154,8 @@ header {
     width: 100%;
     min-height: auto;
     @include background-cover;
-    background-position: center;
-    background-image: url('../img/header.tiff');
+    background: rgba(0, 0, 0, 0.7) url('../img/header.tiff') center;
+    background-blend-mode: darken;
     text-align: center;
     color: white;
     .header-content {
