background image size contain

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -153,7 +153,8 @@ header {
     position: relative;
     width: 100%;
     min-height: auto;
-    @include background-cover;
+    //@include background-cover;
+    background-size: contain;
     background: rgba(0, 0, 0, 0.7) url('../img/header.tiff') center;
     background-blend-mode: darken;
     text-align: center;
