--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -154,7 +154,7 @@ header {
     width: 100%;
     min-height: auto;
     //@include background-cover;
-    background-size: contain;
+    background-size: auto;
     background: rgba(0, 0, 0, 0.7) url('../img/header.tiff') center;
     background-blend-mode: darken;
     text-align: center;
