body font: Open Sans header content CtA content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Companion To A Great Night Out</h1>
+            <h1>Your companion to a great night out</h1>
             <hr>
             <p>
-                Hot·spot is an event network with a twist.
-                Increase your exposure to new customers and customer spend per head.
+                Hotspot is more than an event network it's the heartbeat of a city.
+                We help customers find your business, have an awesome time and meet new people.
             </p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <a href="#contact" class="btn btn-default btn-xl page-scroll">Get started!</a>
         </div>
     </div>
 </header>
