--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your companion to a great night out</h1>
+            <h1>Your companion for a great night out</h1>
             <hr>
             <p>
-                Hotspot is more than an event network it's the heartbeat of a city.
-                We help customers find your business, have an awesome time and meet new people.
+                Hotspot is more than an event directory it's the heartbeat of a city.
+                We help customers find your business, meet new people and have an awesome time.
             </p>
             <a href="#contact" class="btn btn-default btn-xl page-scroll">Get started!</a>
         </div>
