--- a/_includes/services.html
+++ b/_includes/services.html
@@ -7,34 +7,55 @@
             </div>
         </div>
     </div>
+    <!-- https://www.dtp-transit.jp/books/photoshop4web/dl/Font-Awesome-Cheetsheet-4.3.0.pdf -->
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <i class="fa fa-4x fa-street-view wow bounceIn text-primary"></i>
+                    <h3>The Network Effect</h3>
+                    <p class="text-muted">
+                        Promote your business and connect directly with your key demographic - people that love going out.
+                    </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <i class="fa fa-4x fa-credit-card wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Increase Spend</h3>
+                    <p class="text-muted">
+                        When people meet drinks get bought.
+                        We offer new but familiar ways for your customers to connect, and grow your revenue.
+                    </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <i class="fa fa-4x fa-spinner wow bounceIn text-primary"></i>
+                    <h3>Real Time Events</h3>
+                    <p class="text-muted">
+                        Events in our network are updated in real time.
+                        Customers can see which places are buzzing and who's who at their favourite spots.
+                    </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <h3>Customer Engagement</h3>
+                    <p class="text-muted">
+                        Buy someone a drink and chat, introduce your bestie to someone cute or shout a round with some new friends.
+                        All set up from the comfort of your phone.
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary"></i>
+                    <h3>Event Pages</h3>
+                    <p class="text-muted">
+                        Customise your listing to suit your business, from selling tickets, taking bookings to pushing drink specials.
+                    </p>
                 </div>
             </div>
         </div>
