--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,16 @@
-  <aside class="bg-dark">
+  <aside class="bg-primary">
       <div class="container text-center">
           <div class="call-to-action">
-              <h2>Free Download at Start Bootstrap!</h2>
-              <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+              <a href='https://play.google.com/store/apps/details?id=com.seanyyyyyy.hotspotapp'>
+                  <img alt='Get it on Google Play'
+                       src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'
+                       style="width: 30vw; min-width: 160px;"/>
+              </a>
+              <a href='https://apps.apple.com/us/app/hot-spot/id1573357005'>
+                  <img alt='Get it on the Apple Store'
+                       src='https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg'
+                       style="width: 25vw; min-width: 140px;"/>
+              </a>
           </div>
       </div>
   </aside>
