--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,27 @@
             <h1>Your companion for a great night out</h1>
             <hr>
             <p>
-                Hotspot is more than an event directory it's the heartbeat of a city.
-                We help customers find your business, meet new people and have an awesome time.
+                Hotspot is more than an event directory it's the heartbeat of a city.<br>
+                We connect your business with the right customers, deepen engagement with your patrons and generate sales by bringing people together.
             </p>
-            <a href="#contact" class="btn btn-default btn-xl page-scroll">Get started!</a>
+            <!-- <a href="#contact" class="btn btn-default btn-xl page-scroll">Get in touch</a> -->
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href='https://play.google.com/store/apps/details?id=com.seanyyyyyy.hotspotapp'>
+            <img alt='Get it on Google Play'
+                 src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'
+                 style="width: 25vw; min-width: 160px;"/>
+        </a>
+        <a href='https://apps.apple.com/us/app/hot-spot/id1573357005'>
+            <img alt='Download on the Apple Store'
+                 src='https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg'
+                 style="width: 20vw; min-width: 140px;"/>
+        </a>
+
     </div>
 </header>
