app icon content changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,13 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
+            <img src="/img/logo2-clear-512.png" class="img-responsive" alt="">
             <h1>Your companion for a great night out</h1>
             <hr>
             <p>
-                Hotspot is more than an event directory it's the heartbeat of a city.<br>
-                We connect your business with the right customers, deepen engagement with your patrons and generate sales by bringing people together.
+                Hot·spot connects your business with the right customers, deepens engagement with your patrons and generates sales by bringing people together.
             </p>
-            <!-- <a href="#contact" class="btn btn-default btn-xl page-scroll">Get in touch</a> -->
         </div>
-        <br>
-        <br>
         <br>
         <br>
         <br>
