--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-street-view wow bounceIn text-primary"></i>
-                    <h3>The Network Effect</h3>
+                    <h3>Network Effects</h3>
                     <p class="text-muted">
                         Promote your business and connect directly with your key demographic - people that love going out.
                     </p>
@@ -34,7 +34,7 @@
                     <i class="fa fa-4x fa-spinner wow bounceIn text-primary"></i>
                     <h3>Real Time Events</h3>
                     <p class="text-muted">
-                        Events in our network are updated in real time.
+                        Events in our network update in real time.
                         Customers can see which places are buzzing and who's who at their favourite spots.
                     </p>
                 </div>
