reduced portfolio items to 3 content updates aligned email icon

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,9 +5,11 @@
                 <h2 class="section-heading">Our Mission</h2>
                 <hr class="light">
                 <p class="text-faded">
-                    We connect your business with the right customers, deepen engagement with your patrons and generate sales by bringing people together.
+                    Making connections.<br>
+                    Connecting our business partners with our users.
+                    Connecting our users to each other.<br>
+                    Building a network that is the heartbeat of our city.
                 </p>
-                <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
             </div>
         </div>
     </div>
