--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
             <h1>Your companion for a great night out</h1>
             <hr>
             <p>
-                Hot·spot connects your business with the right customers, deepens engagement with your patrons and generates sales by bringing people together.
+                hot·spot connects your business with the right customers, deepens engagement with your patrons and generates sales by bringing people together.
             </p>
         </div>
         <br>
@@ -15,12 +15,12 @@
         <a href='https://play.google.com/store/apps/details?id=com.seanyyyyyy.hotspotapp'>
             <img alt='Get it on Google Play'
                  src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'
-                 style="width: 25vw; min-width: 160px;"/>
+                 style="width: 20vw; min-width: 160px;"/>
         </a>
         <a href='https://apps.apple.com/us/app/hot-spot/id1573357005'>
             <img alt='Download on the Apple Store'
                  src='https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg'
-                 style="width: 20vw; min-width: 140px;"/>
+                 style="width: 15vw; min-width: 140px;"/>
         </a>
 
     </div>
