--- a/_includes/services.html
+++ b/_includes/services.html
@@ -21,11 +21,11 @@
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-credit-card wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <i class="fa fa-4x fa-usd wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Increase Spend</h3>
                     <p class="text-muted">
                         When people meet drinks get bought.
-                        We offer new but familiar ways for your customers to connect, and grow your revenue.
+                        We offer new but familiar ways for your customers to connect - and grow your revenue.
                     </p>
                 </div>
             </div>
@@ -34,8 +34,8 @@
                     <i class="fa fa-4x fa-spinner wow bounceIn text-primary"></i>
                     <h3>Real Time Events</h3>
                     <p class="text-muted">
-                        Events in our network update in real time.
-                        Customers can see which places are buzzing and who's who at their favourite spots.
+                        Our network updates all listings in real time.
+                        Users can see when your venue is buzzing and who's who at their favourite spots.
                     </p>
                 </div>
             </div>
@@ -46,15 +46,6 @@
                     <p class="text-muted">
                         Buy someone a drink and chat, introduce your bestie to someone cute or shout a round with some new friends.
                         All set up from the comfort of your phone.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary"></i>
-                    <h3>Event Pages</h3>
-                    <p class="text-muted">
-                        Customise your listing to suit your business, from selling tickets, taking bookings to pushing drink specials.
                     </p>
                 </div>
             </div>
