--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
             <h1>Your companion for a great night out</h1>
             <hr>
             <p>
-                hot·spot connects your business with the right customers, deepens engagement with your patrons and generates sales by bringing people together.
+                hot·spot connects your business with new customers, deepens engagement with existing patrons and generates sales by bringing people together.
             </p>
         </div>
         <br>
