--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -7,10 +7,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Bars
+
                             </div>
                             <div class="project-name">
-                                Golden Monkey
+                                Bars
                             </div>
                         </div>
                     </div>
@@ -22,10 +22,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Nightclubs
+
                             </div>
                             <div class="project-name">
-                                Love Machine
+                                Nightclubs
                             </div>
                         </div>
                     </div>
@@ -37,10 +37,24 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Karaokes
+
                             </div>
                             <div class="project-name">
-                                Kbox
+                                Karaokes
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box">
+                    <img src="/img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                            </div>
+                            <div class="project-name">
+                                Festivals
                             </div>
                         </div>
                     </div>
