--- a/_includes/services.html
+++ b/_includes/services.html
@@ -24,8 +24,8 @@
                     <i class="fa fa-4x fa-usd wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Increase Spend</h3>
                     <p class="text-muted">
-                        When people meet drinks get bought.
-                        We offer new but familiar ways for your customers to connect - and grow your revenue.
+                        When people meet drinks get bought.<br>
+                        We offer new but familiar ways for your customers to connect and grow your revenue.
                     </p>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                     <i class="fa fa-4x fa-spinner wow bounceIn text-primary"></i>
                     <h3>Real Time Events</h3>
                     <p class="text-muted">
-                        Our network updates all listings in real time.
+                        Our network updates in real time.
                         Users can see when your venue is buzzing and who's who at their favourite spots.
                     </p>
                 </div>
