--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,11 +5,10 @@
                 <h2 class="section-heading">Our Mission</h2>
                 <hr class="light">
                 <p class="text-faded">
-                    Making connections.<br>
-                    Connecting our business partners with our users.
-                    Connecting our users to each other.<br>
-                    Building a network that is the heartbeat of our city.
+                    Connecting our business partners with our users and our users with each other.<br>
+                    To build a network that is the heartbeat of our city.
                 </p>
+                <i class="fa fa-4x fa-heartbeat wow bounceIn text-faded"></i>
             </div>
         </div>
     </div>
