content updates portfolio images

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -24,7 +24,7 @@
                     <i class="fa fa-4x fa-usd wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Increase Spend</h3>
                     <p class="text-muted">
-                        When people meet drinks get bought.<br>
+                        When people meet drinks get bought.
                         We offer new but familiar ways for your customers to connect and grow your revenue.
                     </p>
                 </div>
