--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,8 +5,8 @@
                 <h2 class="section-heading">Our Mission</h2>
                 <hr class="light">
                 <p class="text-faded">
-                    Connecting our business partners with our users and our users with each other.<br>
-                    To build a network that is the heartbeat of our city.
+                    Connecting our partners with our users, and our users with each other.<br>
+                    Building a network that is the heartbeat of our city.
                 </p>
                 <i class="fa fa-4x fa-heartbeat wow bounceIn text-faded"></i>
             </div>
