--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,11 +3,10 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a class="portfolio-box">
-                    <img src="/img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="/img/portfolio/bars.jpeg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-
                             </div>
                             <div class="project-name">
                                 Bars
@@ -18,11 +17,10 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a class="portfolio-box">
-                    <img src="/img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="/img/portfolio/nightclubs.jpeg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-
                             </div>
                             <div class="project-name">
                                 Nightclubs
@@ -33,22 +31,22 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a class="portfolio-box">
-                    <img src="/img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="/img/portfolio/karaoke.jpeg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-
                             </div>
                             <div class="project-name">
-                                Karaokes
+                                Karaoke
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
+            <!--
             <div class="col-lg-4 col-sm-6">
                 <a class="portfolio-box">
-                    <img src="/img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="/img/portfolio/festivals.jpeg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -60,6 +58,7 @@
                     </div>
                 </a>
             </div>
+            -->
         </div>
     </div>
 </section>
