content updates README.MD

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Let's Get In Touch!</h2>
+                <h2 class="section-heading">Let's Get In Touch</h2>
                 <hr class="primary">
                 <p>We’re here to help you get started or discuss solutions that best serve your business.<br>
                     Send us an email and we'll get back to you as soon as possible!</p>
