--- a/_includes/services.html
+++ b/_includes/services.html
@@ -15,7 +15,7 @@
                     <i class="fa fa-4x fa-street-view wow bounceIn text-primary"></i>
                     <h3>Network Effects</h3>
                     <p class="text-muted">
-                        Promote your business and connect directly with your key demographic - people that love going out.
+                        Our users are patrons of bars, clubs, karaokes - people that love to go out. Connect directly with your key demographic.
                     </p>
                 </div>
             </div>
