--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,14 +14,13 @@
         <br>
         <a href='https://play.google.com/store/apps/details?id=com.seanyyyyyy.hotspotapp'>
             <img alt='Get it on Google Play'
-                 src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'
+                 src='/img/google-play-badge.png'
                  style="width: 20vw; min-width: 160px;"/>
         </a>
         <a href='https://apps.apple.com/us/app/hot-spot/id1573357005'>
             <img alt='Download on the Apple Store'
-                 src='https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg'
+                 src='/img/ios-store-badge.svg'
                  style="width: 15vw; min-width: 140px;"/>
         </a>
-
     </div>
 </header>
