--- a/_includes/services.html
+++ b/_includes/services.html
@@ -44,8 +44,8 @@
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Customer Engagement</h3>
                     <p class="text-muted">
-                        Buy someone a drink and chat, introduce your bestie to someone cute or shout a round with some new friends.
-                        All set up from the comfort of your phone.
+                        Entertain your patrons with our in-venue matching system.
+                        Buy someone a drink and chat, intro your friend or shout a round with some new friends.
                     </p>
                 </div>
             </div>
