--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,9 @@
             <h1>Your companion for a great night out</h1>
             <hr>
             <p>
-                hot·spot connects your business with new customers, deepens engagement with existing patrons and generates drink sales by bringing people together.
+                hot·spot connects your business with new customers,
+                deepens engagement with your existing patrons
+                and generates sales by bringing people together.
             </p>
         </div>
         <br>
@@ -15,7 +17,7 @@
         <a href='https://play.google.com/store/apps/details?id=com.seanyyyyyy.hotspotapp'>
             <img alt='Get it on Google Play'
                  src='/img/google-play-badge.png'
-                 style="width: 20vw; min-width: 160px;"/>
+                 style="width: 18vw; min-width: 165px;"/>
         </a>
         <a href='https://apps.apple.com/us/app/hot-spot/id1573357005'>
             <img alt='Download on the Apple Store'
