--- a/_includes/services.html
+++ b/_includes/services.html
@@ -15,7 +15,19 @@
                     <i class="fa fa-4x fa-street-view wow bounceIn text-primary"></i>
                     <h3>Network Effects</h3>
                     <p class="text-muted">
-                        Our users are patrons of bars, clubs, karaokes - people that love to go out. Connect directly with your key demographic.
+                        Our users are patrons of bars, clubs, karaokes - people that love to go out.
+                        Promote your business directly to your key demographic.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Customer Engagement</h3>
+                    <p class="text-muted">
+                        Entertain your patrons with our in-venue matching system.
+                        Buy someone a drink and chat, intro a friend or shout a round with some new ones.
                     </p>
                 </div>
             </div>
@@ -25,27 +37,18 @@
                     <h3>Increase Spend</h3>
                     <p class="text-muted">
                         When people meet drinks get bought.
-                        We offer new but familiar ways for your customers to connect and grow your revenue.
+                        We offer new but familiar ways for your customers to connect
+                        and every connection goes straight to your bottom line.
                     </p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-spinner wow bounceIn text-primary"></i>
-                    <h3>Real Time Events</h3>
+                    <h3>Real Time Updates</h3>
                     <p class="text-muted">
-                        Our network updates in real time.
                         Users can see when your venue is buzzing and who's who at their favourite spots.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Customer Engagement</h3>
-                    <p class="text-muted">
-                        Entertain your patrons with our in-venue matching system.
-                        Buy someone a drink and chat, intro your friend or shout a round with some new friends.
+                        Connect with them at the right time - when they're looking to grab a drink.
                     </p>
                 </div>
             </div>
